--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
 
         <div class="menu_titikTiga tombol">
         </div>
-        <div class="menu_beranda tombol" onclick="geserHalamanBeranda()">
+        <div class="menu_beranda tombol">
           <p class="menu_beranda"></p>
         </div>
         <div class="menu_custom tombol">
