versi 1 beta sudah launching di server

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Costom Cloths</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../bootstrap\dist\css\bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="bootstrap\dist\css\bootstrap.css">
   </head>
   <body>
     <!-- <?php $o = 1; ?>
@@ -25,7 +25,7 @@
         <div class="menu_beranda tombol">
           <p class="menu_beranda"></p>
         </div>
-        <div class="menu_custom tombol">
+        <div class="menu_custom tombol garisBawah">
         </div>
       </nav>
     </section>
@@ -33,7 +33,7 @@
 
     <!-- ceritanya ini isinya -->
     <section id="bagian_konten">
-      <div class="bagian_konten">
+      <div class="bagian_konten geserKiri">
         <p>Halaman Beranda</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
@@ -45,7 +45,7 @@
       </div>
     </section>
     <section id="bagian_konten2">
-      <div class="bagian_konten2">
+      <div class="bagian_konten2 geserKanan">
         <p>Halaman Custom</p>
         <p> hay bangsad apakah kamu sudah makan ?Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
@@ -58,7 +58,7 @@
     <!-- akhir ceritanya isinya -->
 
 
-    <script type="text/javascript" src="../js/script.js"></script>
-    <!-- <script src="../bootstrap\dist\js\bootstrap.js"></script> -->
+    <script type="text/javascript" src="js/script.js"></script>
+    <!-- <script src="bootstrap\dist\js\bootstrap.js"></script> -->
   </body>
 </html>
